# care-dem

./: Dockerfile  README.md  dashboard.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  app_old.py
