[project]
name = "care-dem"
version = "0.1.0"
description = "CareDem: Compassionate AI for dementia care"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "requests",
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
